k8s/traefik/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.1.4
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: smtps
              containerPort: 465 
          volumeMounts:
            - name: dynamic-configuration
              mountPath: /etc/traefik/conf
            - name: static-configuration
              mountPath: /etc/traefik/traefik.yaml
              subPath: traefik.yaml
      volumes:
        - name: dynamic-configuration
          configMap:
            name: dynamic-configuration
        - name: static-configuration
          configMap:
            name: static-configuration
