k8s/traefik/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik

spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.214
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
    - name: dashboard
      port: 8080
  selector:
    app: traefik
