k8s/traefik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints: [https]
  routes:
  - kind: Rule
    match: Host(`kube-traefik.pycrs.cz`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - kind: TraefikService
      name: api@internal
  tls: {}
